Migration to .NET Core 2.0 RefreshToken logic added
