# TpDotNetCore/Domain/UserConfiguration/Repositories/IRefreshTokenRepository.cs
@@ -1,0 +1,14 @@
+using TpDotNetCore.Repositories;
+
+namespace TpDotNetCore.Domain.UserConfiguration.Repositories
+{
+    public interface IRefreshTokenRepository : IRepository<IRefreshTokenRepository>
+    {
+        bool AddToken(RefreshToken token);
+
+        bool ExpireToken(RefreshToken token);
+
+        RefreshToken GetToken(string refresh_token);
+
+    }
+}
